<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settingsToolbar"
            style="@style/LightToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileConstraintLayout">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/settings"
                android:textStyle="bold"
                android:textColor="@color/textColorWhite"
                android:textSize="16sp"/>

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profileConstraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsToolbar"
            app:layout_constraintBottom_toTopOf="@+id/line1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tvName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/user_name"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textDirection="rtl"
                app:layout_constraintBottom_toTopOf="@id/tvMobileNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgProfile"
                app:layout_constraintTop_toTopOf="@id/imgProfile" />

            <TextView
                android:id="@+id/tvMobileNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/user_mobile"
                android:textDirection="rtl"
                android:textColor="@color/textColorBlack"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgProfile"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/line1"
            android:background="@color/lightThemeDividerColor"
            app:layout_constraintTop_toBottomOf="@id/profileConstraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/chatsConstraintLayout"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chatsConstraintLayout"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/item_pressed_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            app:layout_constraintBottom_toTopOf="@id/privacyConstraintLayout">

            <ImageView
                android:id="@+id/imgChats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/chats"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvChats"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvChats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chats"
                android:textColor="@color/textColorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/imgChats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgChats"
                app:layout_constraintTop_toTopOf="@id/imgChats" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/privacyConstraintLayout"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/item_pressed_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chatsConstraintLayout"
            app:layout_constraintBottom_toTopOf="@id/languageConstraintLayout">

            <ImageView
                android:id="@+id/imgPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/privacy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvPrivacy"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/privacy_and_security"
                android:textColor="@color/textColorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/imgPrivacy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgPrivacy"
                app:layout_constraintTop_toTopOf="@id/imgPrivacy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/languageConstraintLayout"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/item_pressed_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacyConstraintLayout"
            app:layout_constraintBottom_toTopOf="@id/advancedConstraintLayout">

            <ImageView
                android:id="@+id/imgLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/language"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvLanguage"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/textColorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/imgLanguage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgLanguage"
                app:layout_constraintTop_toTopOf="@id/imgLanguage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/advancedConstraintLayout"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/item_pressed_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languageConstraintLayout"
            app:layout_constraintBottom_toTopOf="@id/helpConstraintLayout">

            <ImageView
                android:id="@+id/imgAdvanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/advanced"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvAdvanced"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAdvanced"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/advanced"
                android:textColor="@color/textColorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/imgAdvanced"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgAdvanced"
                app:layout_constraintTop_toTopOf="@id/imgAdvanced" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/helpConstraintLayout"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/item_pressed_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/advancedConstraintLayout"
            app:layout_constraintBottom_toTopOf="@id/exitConstraintLayout">

            <ImageView
                android:id="@+id/imgHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/help"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvHelp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@color/textColorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/imgHelp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgHelp"
                app:layout_constraintTop_toTopOf="@id/imgHelp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exitConstraintLayout"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/item_pressed_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpConstraintLayout"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/imgExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvExit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exitAccount"
                android:textColor="@color/textColorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/imgExit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgExit"
                app:layout_constraintTop_toTopOf="@id/imgExit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>